--- a/src/FormationBundle/Resources/views/promotion/new.html.twig
+++ b/src/FormationBundle/Resources/views/promotion/new.html.twig
@@ -54,23 +54,17 @@
                             {{ form_widget(form.module) }}
                             {{ form_label(form.module) }}
                             {{ form_errors(form.module) }}
-                            <!-- Trigger/Open The Modal -->
-                            <button id="myBtn">+</button>
+                            <!-- Modal Trigger -->
+                            <a class="btn modal-trigger" href="#modal2">Modal2</a>
 
-                            <!-- The Modal -->
-                            <div id="myModal" class="modal">
-
-                                <!-- Modal content -->
+                            <!-- Modal Structure -->
+                            <div id="modal2" class="modal">
                                 <div class="modal-content">
-                                    <span class="close">x</span>
-                                    <div class="modal-body">
-                                        {{ render(controller('FormationBundle:Module:new')) }}
-                                        <div class="edit_admin">
-                                            <input class="btn btn-default edit_admin"  type="submit" value="Ajouter" />
-                                        </div>
+                                    {{ render(controller('FormationBundle:Module:new')) }}
+                                    <div class="edit_admin">
+                                        <input class="btn btn-default edit_admin"  type="submit" value="Ajouter" />
                                     </div>
                                 </div>
-
                             </div>
                         </div>
                     </div>
@@ -79,26 +73,19 @@
                             {{ form_widget(form.eleve) }}
                             {{ form_label(form.eleve) }}
                             {{ form_errors(form.eleve) }}
-                            <!-- Trigger/Open The Modal -->
-                            <button id="myBtn1">+</button>
+                            <!-- Modal Trigger -->
+                            <a class="btn modal-trigger" href="#modal1">Modal</a>
 
-                            <!-- The Modal -->
-                            <div id="myModaleleve" class="modal">
-
-                                <!-- Modal content -->
+                            <!-- Modal Structure -->
+                            <div id="modal1" class="modal">
                                 <div class="modal-content">
-                                    <span class="close">x</span>
-                                    <div class="modal-body">
-                                        {{ render(controller('FormationBundle:Eleve:new')) }}
-                                        <div class="edit_admin">
-                                            <input class="btn btn-default edit_admin"  type="submit" value="Ajouter" />
-                                        </div>
+                                    {{ render(controller('FormationBundle:Eleve:new')) }}
+                                    <div class="edit_admin">
+                                        <input class=""  type="submit" value="Ajouter" />
                                     </div>
                                 </div>
-
                             </div>
                         </div>
-
                     </div>
                     <div class="row-hidden">
                         <div class="input-field col s12">
