--- a/src/FormationBundle/Resources/views/promotion/edit.html.twig
+++ b/src/FormationBundle/Resources/views/promotion/edit.html.twig
@@ -28,14 +28,9 @@
                 </div>
                 <div class="row">
                     <div class="input-field col s6">
-                        {{ form_label(edit_form.nomFormateur) }}
-                        {{ form_widget(edit_form.nomFormateur) }}
-                        {{ form_errors(edit_form.nomFormateur) }}
-                    </div>
-                    <div class="input-field col s6">
-                        {{ form_label(edit_form.prenomFormateur) }}
-                        {{ form_widget(edit_form.prenomFormateur) }}
-                        {{ form_errors(edit_form.prenomFormateur) }}
+                        {{ form_label(edit_form.formateur) }}
+                        {{ form_widget(edit_form.formateur) }}
+                        {{ form_errors(edit_form.formateur) }}
                     </div>
                 </div>
                 <div class="row">
@@ -43,10 +38,6 @@
                         {{ form_widget(edit_form.langage) }}
                         {{ form_label(edit_form.langage) }}
                         {{ form_errors(edit_form.langage) }}
-                    </div>
-                    <div class="input-field col s6">
-                        {{ form_widget(edit_form.intervenant) }}
-                        {{ form_errors(edit_form.intervenant) }}
                     </div>
                 </div>
                 <div class="row">
