--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -20,7 +20,7 @@
     </ul>
     <nav>
         <div class="nav-wrapper">
-            <a class="brand-logo">Formation</a>
+            <img style="height: 100%" src="{{ asset('bundles/formation/image/logo.png') }}" />
             <ul id="nav-mobile" class="right hide-on-med-and-down ilike-blue-container">
                 <li><a href="{{ path('promotion_index') }}">Promotions</a></li>
                 <li><a href="{{ path('eleve_index') }}">Eleves</a></li>
