--- a/src/FormationBundle/Resources/views/eleve/new.html.twig
+++ b/src/FormationBundle/Resources/views/eleve/new.html.twig
@@ -89,6 +89,9 @@
             </div>
         </div>
     </div>
+    <div class="button-centre">
+        <input class="btn btn-default edit_admin" type="submit" value="Créer" />
+    </div>
     {{ form_end(form) }}
 
     <ul>
