--- a/src/FormationBundle/Resources/views/promotion/listeelevprom.html.twig
+++ b/src/FormationBundle/Resources/views/promotion/listeelevprom.html.twig
@@ -16,12 +16,12 @@
                     </tr>
                     </thead>
                     <tbody>
+
                     {% for eleves in promo %}
 
                         {% for eleve in eleves.eleve %}
-                        {#{{ dump(ele) }}#}
                         <tr>
-                            <td><a href="{{ path('formation_homepage', { 'id': eleve.id })}}"</a>{{ eleve.nom }}</td>
+                            <td><a href="{{ path('formation_homepage', { 'id': eleve.id })}}">{{ eleve.nom }}</a></td>
                             <td>{{ eleve.datenaissance|date("d/m/Y") }}</td>
                             <td>{{ eleve.tel }}</td>
                             <td>
