--- a/src/FormationBundle/Resources/views/Default/index.html.twig
+++ b/src/FormationBundle/Resources/views/Default/index.html.twig
@@ -7,8 +7,8 @@
 {% endfor %}
 
 {{ form_start(form) }}
-<div class="container">
-    <div class="col s12 m10">
+<div class="container-fluid">
+    <div class="col sm-12">
 	<table class="striped highlight">
       <thead>
         <tr>
