--- a/src/FormationBundle/Resources/views/promotion/new.html.twig
+++ b/src/FormationBundle/Resources/views/promotion/new.html.twig
@@ -71,16 +71,16 @@
                             {{ form_widget(form.eleve) }}
                             {{ form_label(form.eleve) }}
                             {{ form_errors(form.eleve) }}
-                            <!-- Modal Trigger -->
-                            <a class="btn modal-trigger" href="#modal1">+</a>
+                            {#<!-- Modal Trigger -->#}
+                            {#<a class="btn modal-trigger" href="#modal1">+</a>#}
 
-                            <!-- Modal Structure -->
-                            <div id="modal1" class="modal">
-                                <div class="modal-content">
-                                    {{ render(controller('FormationBundle:Eleve:new')) }}
-                                </div>
-                            </div>
-                        </div>
+                            {#<!-- Modal Structure -->#}
+                            {#<div id="modal1" class="modal">#}
+                                {#<div class="modal-content">#}
+                                    {#{{ render(controller('FormationBundle:Eleve:new')) }}#}
+                                {#</div>#}
+                            {#</div>#}
+                        {#</div>#}
                     </div>
                     <div class="row-hidden">
                         <div class="input-field col s12">
