--- a/src/FormationBundle/Resources/views/Default/index.html.twig
+++ b/src/FormationBundle/Resources/views/Default/index.html.twig
@@ -2,246 +2,6 @@
 
 {% block body %}
 
-  <p class="titre">{{ eleve.nom }}</p>
-
-{{ form_start(form) }}
-<div class="container-fluid">
-    <div class="col sm-12">
-	<table class="striped highlight">
-      <thead>
-        <tr>
-            <th>module</th>
-            {% for promotion in promotion %}
-                {% if promotion.semaines == 4 %}
-                    <th style="text-align: center" colspan="2">Semaine 1</th>
-                    <th colspan="2">Semaine 2</th>
-                    <th colspan="2">Semaine 3</th>
-                    <th colspan="2">Semaine 4</th>
-                {% elseif promotion.semaines == 5 %}
-                    <th style="text-align: center" colspan="2">Semaine 1</th>
-                    <th colspan="2">Semaine 2</th>
-                    <th colspan="2">Semaine 3</th>
-                    <th colspan="2">Semaine 4</th>
-                    <th colspan="2">Semaine 5</th>
-                {% endif %}
-            {% endfor %}
-            {#<th style="text-align: center;" colspan="2">8</th>#}
-            {#<th style="text-align: center;" colspan="2">9</th>#}
-            {#<th style="text-align: center;" colspan="2">10</th>#}
-            {#<th style="text-align: center;" colspan="2">11</th>#}
-            {#<th style="text-align: center;" colspan="2">12</th>#}
-            {#<th style="text-align: center;" colspan="2">13</th>#}
-            {#<th style="text-align: center;" colspan="2">14</th>#}
-            {#<th style="text-align: center;" colspan="2">15</th>#}
-            {#<th style="text-align: center;" colspan="2">Bilan</th>#}
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-            <td>nom</td>
-            {% for promotion in promotion %}
-                {% if promotion.semaines == 4 %}
-            <td style="text-align: center">tp</td>
-            <td style="text-align: center">cours</td>
-            <td>tp</td>
-            <td>cours</td>
-            <td>tp</td>
-            <td>cours</td>
-            <td>tp</td>
-            <td>cours</td>
-                {% elseif promotion.semaines == 5 %}
-                    <td style="text-align: center">tp</td>
-                    <td style="text-align: center; border-right:1px solid black ">cours</td>
-                    <td>tp</td>
-                    <td>cours</td>
-                    <td>tp</td>
-                    <td>cours</td>
-                    <td>tp</td>
-                    <td>cours</td>
-                    <td>tp</td>
-                    <td>cours</td>
-                {% endif %}
-            {% endfor %}
-          {#<td>tp</td>#}
-          {#<td>9</td>#}
-          {#<td>10</td>#}
-          {#<td>11</td>#}
-          {#<td>12</td>#}
-          {#<td>13</td>#}
-          {#<td>14</td>#}
-          {#<td>15</td>#}
-          {#<td>16</td>#}
-          {#<td>17</td>#}
-          {#<td>18</td>#}
-          {#<td>19</td>#}
-          {#<td>20</td>#}
-          {#<td>21</td>#}
-          {#<td>22</td>#}
-          {#<td>23</td>#}
-          {#<td>24</td>#}
-        <tr>
-        {% for module in module %}
-        	<tr>
-	        	<td>{{ module.nom }}</td>
-            {% for promotion in promotion %}
-                {% if promotion.semaines == 4 %}
-                <td style="border-right:1px solid black">
-                  <select name="note[]">
-                    <option style="text-align: center" value="nd">Non défini</option>
-                    <option value="A">A</option>
-                    <option value="EA">EA</option>
-                    <option value="NA">NA</option>
-                  </select>
-                </td>
-                <td>
-                  <select name="note[]">
-                    <option value="nd">Non défini</option>
-                    <option value="A">A</option>
-                    <option value="EA">EA</option>
-                    <option value="NA">NA</option>
-                  </select>
-                </td>
-                <td>
-                  <select name="note[]">
-                    <option value="nd">Non défini</option>
-                    <option value="A">A</option>
-                    <option value="EA">EA</option>
-                    <option value="NA">NA</option>
-                  </select>
-                </td>
-                <td>
-                  <select name="note[]">
-                    <option value="nd">Non défini</option>
-                    <option value="A">A</option>
-                    <option value="EA">EA</option>
-                    <option value="NA">NA</option>
-                  </select>
-                </td>
-                <td>
-                  <select name="note[]">
-                    <option value="nd">Non défini</option>
-                    <option value="A">A</option>
-                    <option value="EA">EA</option>
-                    <option value="NA">NA</option>
-                  </select>
-                </td>
-                <td>
-                  <select name="note[]">
-                    <option value="nd">Non défini</option>
-                    <option value="A">A</option>
-                    <option value="EA">EA</option>
-                    <option value="NA">NA</option>
-                  </select>
-                </td>
-                <td>
-                  <select name="note[]">
-                    <option value="nd">Non défini</option>
-                    <option value="A">A</option>
-                    <option value="EA">EA</option>
-                    <option value="NA">NA</option>
-                  </select>
-                </td>
-                <td>
-                    <select name="note[]">
-                        <option value="nd">Non défini</option>
-                        <option value="A">A</option>
-                        <option value="EA">EA</option>
-                        <option value="NA">NA</option>
-                    </select>
-                </td>
-                {% elseif promotion.semaines == 5 %}
-                    <td >
-                        <select style="text-align: center" name="note[]">
-                            <option value="nd">Non défini</option>
-                            <option value="A">A</option>
-                            <option value="EA">EA</option>
-                            <option value="NA">NA</option>
-                        </select>
-                    </td>
-                    <td>
-                        <select name="note[]">
-                            <option value="nd">Non défini</option>
-                            <option value="A">A</option>
-                            <option value="EA">EA</option>
-                            <option value="NA">NA</option>
-                        </select>
-                    </td>
-                    <td>
-                        <select name="note[]">
-                            <option value="nd">Non défini</option>
-                            <option value="A">A</option>
-                            <option value="EA">EA</option>
-                            <option value="NA">NA</option>
-                        </select>
-                    </td>
-                    <td>
-                        <select name="note[]">
-                            <option value="nd">Non défini</option>
-                            <option value="A">A</option>
-                            <option value="EA">EA</option>
-                            <option value="NA">NA</option>
-                        </select>
-                    </td>
-                    <td>
-                        <select name="note[]">
-                            <option value="nd">Non défini</option>
-                            <option value="A">A</option>
-                            <option value="EA">EA</option>
-                            <option value="NA">NA</option>
-                        </select>
-                    </td>
-                    <td>
-                        <select name="note[]">
-                            <option value="nd">Non défini</option>
-                            <option value="A">A</option>
-                            <option value="EA">EA</option>
-                            <option value="NA">NA</option>
-                        </select>
-                    </td>
-                    <td>
-                        <select name="note[]">
-                            <option value="nd">Non défini</option>
-                            <option value="A">A</option>
-                            <option value="EA">EA</option>
-                            <option value="NA">NA</option>
-                        </select>
-                    </td>
-                    <td>
-                        <select name="note[]">
-                            <option value="nd">Non défini</option>
-                            <option value="A">A</option>
-                            <option value="EA">EA</option>
-                            <option value="NA">NA</option>
-                        </select>
-                    </td>
-                    <td>
-                        <select name="note[]">
-                            <option value="nd">Non défini</option>
-                            <option value="A">A</option>
-                            <option value="EA">EA</option>
-                            <option value="NA">NA</option>
-                        </select>
-                    </td>
-                    <td>
-                        <select name="note[]">
-                            <option value="nd">Non défini</option>
-                            <option value="A">A</option>
-                            <option value="EA">EA</option>
-                            <option value="NA">NA</option>
-                        </select>
-                    </td>
-                </tr>
-                {% endif %}
-            {% endfor %}
-        {% endfor %}
-      </tbody>
-    </table>
-</div>
-<div class="button-centre">
-  <input class="btn btn-default edit_admin" type="submit" value="Valider" />
-</div>
-
-
         <p class="titre">{{ eleve.nom }}</p>
 
     {{ form_start(form) }}
@@ -254,6 +14,7 @@
                     {% for i in 1..promotion.semaines %}
                         <th style="text-align: center" colspan="2">Semaine {{ i }}</th>
                     {% endfor %}
+                        <th>Bilan</th>
             </tr>
             </thead>
             <tbody>
@@ -263,6 +24,7 @@
                         <td style="text-align: center">tp</td>
                         <td style="text-align: center">cours</td>
                     {% endfor %}
+                        <td></td>
 
             <tr>
                 {% for module in module %}
@@ -271,8 +33,8 @@
                 {% if notes is empty %}
                 {% for i in 1..promotion.semaines*2 %}
                     <td style="border-right:1px solid black">
-                        <select style="" name="note[]">
-                            <option value="nd">Non défini</option>
+                        <select name="note[]">
+                            <option value="nd">ND</option>
                             <option value="A">A</option>
                             <option value="EA">EA</option>
                             <option value="NA">NA</option>
@@ -283,7 +45,7 @@
                     {% for note in notes %}
                         <td style="border-right:1px solid black">
                             <select style="" name="note[]">
-                                <option {% if note.note == 'nd' %} selected="selected"{% endif %} value="nd">Non défini</option>
+                                <option {% if note.note == 'nd' %} selected="selected"{% endif %} value="nd">ND</option>
                                 <option {% if note.note == 'A' %} selected="selected"{% endif %} value="A">A</option>
                                 <option {% if note.note == 'EA' %} selected="selected"{% endif %} value="EA">EA</option>
                                 <option {% if note.note == 'NA' %} selected="selected"{% endif %} value="NA">NA</option>
