--- a/src/FormationBundle/Resources/views/module/edit.html.twig
+++ b/src/FormationBundle/Resources/views/module/edit.html.twig
@@ -14,6 +14,13 @@
                         {{ form_errors(edit_form.nom) }}
                     </div>
                 </div>
+                <div class="row">
+                    <div class="input-field col s12">
+                        {{ form_widget(edit_form.promotion) }}
+                        {{ form_label(edit_form.promotion) }}
+                        {{ form_errors(edit_form.promotion) }}
+                    </div>
+                </div>
             </div>
         </div>
     </div>
