--- a/src/FormationBundle/Resources/views/promotion/new.html.twig
+++ b/src/FormationBundle/Resources/views/promotion/new.html.twig
@@ -66,11 +66,11 @@
                             {#</div>#}
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="input-field col s12">
-                            {{ form_widget(form.eleve) }}
-                            {{ form_label(form.eleve) }}
-                            {{ form_errors(form.eleve) }}
+                    {#<div class="row">#}
+                        {#<div class="input-field col s12">#}
+                            {#{{ form_widget(form.eleve) }}#}
+                            {#{{ form_label(form.eleve) }}#}
+                            {#{{ form_errors(form.eleve) }}#}
                             {#<!-- Modal Trigger -->#}
                             {#<a class="btn modal-trigger" href="#modal1">+</a>#}
 
@@ -81,7 +81,7 @@
                                 {#</div>#}
                             {#</div>#}
                         {#</div>#}
-                    </div>
+                    {#</div>#}
                     <div class="row-hidden">
                         <div class="input-field col s12">
                             {{ form_widget(form.archive) }}
