--- a/src/FormationBundle/Resources/views/promotion/new.html.twig
+++ b/src/FormationBundle/Resources/views/promotion/new.html.twig
@@ -31,11 +31,11 @@
                             {{ form_widget(form.formateur) }}
                             {{ form_errors(form.formateur) }}
                         </div>
-                        <div class="input-field col s6">
-                            {{ form_widget(form.langage) }}
-                            {{ form_label(form.langage) }}
-                            {{ form_errors(form.langage) }}
-                        </div>
+                        {#<div class="input-field col s6">#}
+                            {#{{ form_widget(form.langage) }}#}
+                            {#{{ form_label(form.langage) }}#}
+                            {#{{ form_errors(form.langage) }}#}
+                        {#</div>#}
                     </div>
                     <div class="row">
                         <div class="input-field col s6">
@@ -52,9 +52,9 @@
 
                     <div class="row">
                         <div class="input-field col s12">
-                            {{ form_widget(form.module) }}
-                            {{ form_label(form.module) }}
-                            {{ form_errors(form.module) }}
+                            {#{{ form_widget(form.module) }}#}
+                            {#{{ form_label(form.module) }}#}
+                            {#{{ form_errors(form.module) }}#}
                             <!-- Modal Trigger -->
                             <a class="btn modal-trigger" href="#modal2">+</a>
 
@@ -68,9 +68,9 @@
                     </div>
                     <div class="row">
                         <div class="input-field col s12">
-                            {{ form_widget(form.eleve) }}
-                            {{ form_label(form.eleve) }}
-                            {{ form_errors(form.eleve) }}
+                            {#{{ form_widget(form.eleve) }}#}
+                            {#{{ form_label(form.eleve) }}#}
+                            {#{{ form_errors(form.eleve) }}#}
                             {#<!-- Modal Trigger -->#}
                             {#<a class="btn modal-trigger" href="#modal1">+</a>#}
 
