--- a/src/FormationBundle/Resources/views/Default/index.html.twig
+++ b/src/FormationBundle/Resources/views/Default/index.html.twig
@@ -3,10 +3,6 @@
 {% block body %}
 
         <p class="titre">{{ eleve.nom }}</p>
-    {{ dump(promotion) }}
-    {{ dump(module) }}
-    {{ dump(eleve) }}
-    {{ dump(notes) }}
 
     {{ form_start(form) }}
     <div class="container-fluid">
@@ -14,65 +10,66 @@
         <table class="striped highlight">
             <thead>
             <tr>
-                <th>module</th>
+                <th>module
                     {% for i in 1..promotion.semaines %}
-                        <th style="text-align: center" colspan="2">Semaine {{ i }}</th>
-                    {% endfor %}
+                <th style="text-align: center" colspan="2">Semaine {{ i }}</th>
+                {% endfor %}
                         <th style="text-align: center">Bilan</th>
             </tr>
             </thead>
             <tbody>
             <tr>
                 <td>nom</td>
-                    {% for i in 1..promotion.semaines %}
-                        <td style="text-align: center">tp</td>
-                        <td style="text-align: center">cours</td>
-                    {% endfor %}
-                        <td></td>
-
+                {% for i in 1..promotion.semaines %}
+                    <td style="text-align: center">tp</td>
+                    <td style="text-align: center">cours</td>
+                {% endfor %}
+                <td></td>
+            </tr>
             <tr>
-                {% for module in module %}
-            <tr>
+                {% for module in modules %}
                 <td>{{ module.nom }}</td>
-                {% if notes is empty %}
-                {% for i in 1..promotion.semaines*2 %}
+                    {% if notes is empty %}
+                        {% for i in 1..promotion.semaines*2 %}
+                            <td style="border-right:1px solid black">
+                                <select style="" name="note[]">
+                                    <option {% if note.note == 'nd' %} selected="selected"{% endif %} value="nd">ND</option>
+                                    <option {% if note.note == 'A' %} selected="selected"{% endif %} value="A">A</option>
+                                    <option {% if note.note == 'EA' %} selected="selected"{% endif %} value="EA">EA</option>
+                                    <option {% if note.note == 'NA' %} selected="selected"{% endif %} value="NA">NA</option>
+                                </select>
+                            </td>
+
+                        {% endfor %}
+                        {% else %}
+                    {% for note in notes %}
                     <td style="border-right:1px solid black">
-                        <select name="note[]">
-                            <option value="nd">ND</option>
-                            <option value="A">A</option>
-                            <option value="EA">EA</option>
-                            <option value="NA">NA</option>
+                        <select style="" name="note[]">
+                            <option {% if note.note == 'nd' %} selected="selected"{% endif %} value="nd">ND</option>
+                            <option {% if note.note == 'A' %} selected="selected"{% endif %} value="A">A</option>
+                            <option {% if note.note == 'EA' %} selected="selected"{% endif %} value="EA">EA</option>
+                            <option {% if note.note == 'NA' %} selected="selected"{% endif %} value="NA">NA</option>
                         </select>
                     </td>
+
+                    {% endfor %}
+                    {% endif %}
                 {% endfor %}
 
-                    {% else %}
-                    {% for note in notes %}
-                        <td style="border-right:1px solid black">
-                            <select style="" name="note[]">
-                                <option {% if note.note == 'nd' %} selected="selected"{% endif %} value="nd">ND</option>
-                                <option {% if note.note == 'A' %} selected="selected"{% endif %} value="A">A</option>
-                                <option {% if note.note == 'EA' %} selected="selected"{% endif %} value="EA">EA</option>
-                                <option {% if note.note == 'NA' %} selected="selected"{% endif %} value="NA">NA</option>
-                            </select>
-                        </td>
-                    {% endfor %}
-                {% endif %}
-            {% endfor %}
-                <td style="border-right:1px solid black">
-                    <select name="note[]">
-                        <option value="nd">ND</option>
-                        <option value="A">A</option>
-                        <option value="EA">EA</option>
-                        <option value="NA">NA</option>
-                    </select>
-                </td>
+                {#<td style="border-right:1px solid black">#}
+                    {#<select name="note[]">#}
+                        {#<option value="nd">ND</option>#}
+                        {#<option value="A">A</option>#}
+                        {#<option value="EA">EA</option>#}
+                        {#<option value="NA">NA</option>#}
+                    {#</select>#}
+                {#</td>#}
+                </tr>
             </tbody>
         </table>
     </div>
     <h1>Commentaire creation</h1>
 
-    {{ form_start(form) }}
         <div class="row">
             <div class="col m8">
                 <div class="row">
@@ -88,7 +85,7 @@
     </div>
 
 
-    {{ form_end(form) }}
+
 
     <ul>
         <li>
@@ -98,4 +95,5 @@
     <div class="button-centre">
         <input class="btn btn-default edit_admin" type="submit" value="Valider" />
     </div>
+    {{ form_end(form) }}
 {% endblock %}
