--- a/src/FormationBundle/Resources/views/eleve/edit.html.twig
+++ b/src/FormationBundle/Resources/views/eleve/edit.html.twig
@@ -68,6 +68,17 @@
                         {{ form_label(edit_form.promotion) }}
                         {{ form_errors(edit_form.promotion) }}
                     </div>
+                    <div class="row">
+                        <div class="input-field col s6">
+                            {{ form_widget(edit_form.etude) }}
+                            {{ form_label(edit_form.etude) }}
+                            {{ form_errors(edit_form.etude) }}
+                        </div>
+                        <div class="input-field col s6">
+                            {{ form_widget(edit_form.module) }}
+                            {{ form_label(edit_form.module) }}
+                            {{ form_errors(edit_form.module) }}
+                        </div>
                         <div class="row">
                             <div class="input-field col s6">
                                 {{ form_widget(edit_form.filecv) }}
