--- a/src/FormationBundle/Resources/views/promotion/listeelevprom.html.twig
+++ b/src/FormationBundle/Resources/views/promotion/listeelevprom.html.twig
@@ -22,15 +22,17 @@
                                 <tr>
                                     <td><a href="{{ path('formation_homepage',{ 'id': promotion.id, 'ideleve': eleve.id }) }}">{{ eleve.nom }}</a></td>
                                     <td>{{ eleve.datenaissance|date("d/m/Y") }}</td>
-                                    <td>{{ eleve.tel }}</td>
+                                    <td>0{{ eleve.tel }}</td>
                                     <td>
                                         <ul>
                                             <li>
                                                 <a href="{{ path('eleve_show', { 'id': eleve.id }) }}">Détails</a>
                                             </li>
+                                            {% if is_granted("ROLE_USER") %}
                                             <li>
                                                 <a href="{{ path('eleve_edit', { 'id': eleve.id }) }}">Editer</a>
                                             </li>
+                                            {% endif %}
                                         </ul>
                                     </td>
                                 </tr>
@@ -41,10 +43,11 @@
             </div>
         </div>
     </div>
-
+{% if is_granted("ROLE_USER") %}
     <ul>
         <li class="button-centre">
             <a class="btn btn-default edit_admin" href="{{ path('eleve_new') }}">Créer un nouvel élève</a>
         </li>
     </ul>
+{% endif %}
 {% endblock %}
