--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -24,8 +24,10 @@
             <ul id="nav-mobile" class="right hide-on-med-and-down ilike-blue-container">
                 <li><a href="{{ path('promotion_index') }}">Promotions</a></li>
                 <li><a href="{{ path('eleve_index') }}">Eleves</a></li>
+                {% if is_granted("ROLE_USER") %}
                 <li><a href="{{ path('module_index') }}">Modules</a></li>
                 <li><a href="{{ path('langage_index') }}">Langages</a></li>
+                {% endif %}
                 <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Archives</a></li>
             </ul>
         </div>
