--- a/src/FormationBundle/Resources/views/Default/index.html.twig
+++ b/src/FormationBundle/Resources/views/Default/index.html.twig
@@ -10,7 +10,7 @@
         <table class="striped highlight">
             <thead>
             <tr>
-                <th>module
+                <th>Modules
                     {% for i in 1..promotion.semaines %}
                 <th style="text-align: center" colspan="2">Semaine {{ i }}</th>
                 {% endfor %}
@@ -28,7 +28,7 @@
             </tr>
             <tr>
                 {% for module in modules %}
-                <td>{{ module.nom }}</td>
+                <td style="border-right: 1px solid black">{{ module.nom }}</td>
                     {% if notes is empty %}
                         {% for i in 1..promotion.semaines*2 %}
                             <td style="border-right:1px solid black">
@@ -56,20 +56,20 @@
                     {% endif %}
                 {% endfor %}
 
-                {#<td style="border-right:1px solid black">#}
-                    {#<select name="note[]">#}
-                        {#<option value="nd">ND</option>#}
-                        {#<option value="A">A</option>#}
-                        {#<option value="EA">EA</option>#}
-                        {#<option value="NA">NA</option>#}
-                    {#</select>#}
-                {#</td>#}
+                <td style="border-right:1px solid black">
+                    <select name="note[]">
+                        <option value="nd">ND</option>
+                        <option value="A">A</option>
+                        <option value="EA">EA</option>
+                        <option value="NA">NA</option>
+                    </select>
+                </td>
                 </tr>
             </tbody>
         </table>
     </div>
+    {% if is_granted("ROLE_USER") %}
     <h1>Commentaire creation</h1>
-
         <div class="row">
             <div class="col m8">
                 <div class="row">
@@ -83,15 +83,8 @@
             </div>
         </div>
     </div>
-
-
-
-
-    <ul>
-        <li>
-            <a href="{{ path('commentaire_index') }}">Back to the list</a>
-        </li>
-    </ul>
+    {% endif %}
+    <div style="margin-top: 50px"></div>
     <div class="button-centre">
         <input class="btn btn-default edit_admin" type="submit" value="Valider" />
     </div>
