--- a/src/FormationBundle/Resources/views/module/new.html.twig
+++ b/src/FormationBundle/Resources/views/module/new.html.twig
@@ -14,13 +14,13 @@
                     {{ form_errors(form.nom) }}
                 </div>
             </div>
-            {#<div class="row">#}
-                {#<div class="input-field col s12">#}
-                    {#{{ form_widget(form.promotion) }}#}
-                    {#{{ form_label(form.promotion) }}#}
-                    {#{{ form_errors(form.promotion) }}#}
-                {#</div>#}
-            {#</div>#}
+            <div class="row">
+                <div class="input-field col s12">
+                    {{ form_widget(form.eleve) }}
+                    {{ form_label(form.eleve) }}
+                    {{ form_errors(form.eleve) }}
+                </div>
+            </div>
         </div>
     </div>
 </div>
