--- a/src/FormationBundle/Resources/views/Default/index.html.twig
+++ b/src/FormationBundle/Resources/views/Default/index.html.twig
@@ -58,7 +58,7 @@
 
                 <td style="border-right:1px solid black">
                     <select name="note[]">
-                        <option value="nd">ND</option>
+                        <option value="and">ND</option>
                         <option value="A">A</option>
                         <option value="EA">EA</option>
                         <option value="NA">NA</option>
