--- a/src/FormationBundle/Resources/views/promotion/new.html.twig
+++ b/src/FormationBundle/Resources/views/promotion/new.html.twig
@@ -31,11 +31,11 @@
                             {{ form_widget(form.formateur) }}
                             {{ form_errors(form.formateur) }}
                         </div>
-                        {#<div class="input-field col s6">#}
-                            {#{{ form_widget(form.langage) }}#}
-                            {#{{ form_label(form.langage) }}#}
-                            {#{{ form_errors(form.langage) }}#}
-                        {#</div>#}
+                        <div class="input-field col s6">
+                            {{ form_widget(form.langage) }}
+                            {{ form_label(form.langage) }}
+                            {{ form_errors(form.langage) }}
+                        </div>
                     </div>
                     <div class="row">
                         <div class="input-field col s6">
